# openobs_beta

./: .gitignore  PLAN.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: daily.rs  files.rs  graph.rs  links.rs  mod.rs  search.rs  settings.rs  tags.rs  templates.rs  vault.rs
src-tauri/src/db/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/parser/: mod.rs
src/components/: ErrorBoundary.tsx  Layout.tsx
src/components/canvas/: CanvasToolbar.tsx  CanvasView.tsx  index.ts
src/components/editor/: Editor.tsx  LivePreview.tsx  ReadingView.tsx  SourceEditor.tsx  Toolbar.tsx  index.ts
src/components/graph/: GraphControls.tsx  GraphView.tsx  LocalGraph.tsx  index.ts
src/components/modals/: CommandPalette.tsx  QuickSwitcher.tsx  SettingsModal.tsx  TemplatePickerModal.tsx  VaultPicker.tsx
src/components/sidebar/: BacklinksPanel.tsx  DailyNotesPanel.tsx  FileTree.tsx  OutgoingLinksPanel.tsx  SearchPanel.tsx  Sidebar.tsx  (+1 more)
src/hooks/: useDailyNotes.ts  useFileSave.ts  useGraph.ts  useHotkeys.ts  useLinks.ts  useSearch.ts  useSettings.ts  useTags.ts
src/lib/: commands.ts  tauri.ts  utils.ts
src/store/: editorStore.ts  index.ts  uiStore.ts  vaultStore.ts
src/types/: canvas.ts  index.ts  links.ts  note.ts  vault.ts
(+12 files in other folders)
