[package]
name = "openobs"
version = "0.1.0"
description = "An Obsidian-like note-taking application"
authors = ["OpenObs Team"]
edition = "2021"

[lib]
name = "openobs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
pulldown-cmark = "0.10"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
